Updated image paths and added favicon

--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -1,4 +1,5 @@
 <title>Domparty Component Library</title>
+<link rel="icon" type="image/png" href="/public/favicon.ico" />
 <meta charset="UTF-8" />
 <meta name="robots" content="all" />
 <meta
