Updated variables and updated favicon path

--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -1,5 +1,5 @@
 <title>Domparty Component Library</title>
-<link rel="icon" type="image/png" href="/public/favicon.ico" />
+<link rel="icon" type="image/png" href="/favicon.ico" />
 <meta charset="UTF-8" />
 <meta name="robots" content="all" />
 <meta
